fix: updated form styles for dark mode, fixed z-index for modal

--- a/src/stories/forms/QuestionForm/QuestionForm.css
+++ b/src/stories/forms/QuestionForm/QuestionForm.css
@@ -9,7 +9,14 @@
   font-family: Optima, sans-serif;
   font-size: 1.2rem;
   font-weight: 600;
-  background: linear-gradient(black, #2a2a2a);
+}
+
+.form-container--dark {
+  background: linear-gradient(#fefcfc, #fffcfc);
+}
+
+.form-container--light {
+  background: linear-gradient(#2a2a2a, #393939);
 }
 
 .success-message {
@@ -29,6 +36,13 @@
   font-family: Optima, sans-serif;
   font-size: 1.2rem;
   margin-bottom: 0.5rem;
+}
+
+.form-label--dark {
+  color: black;
+}
+
+.form-label--light {
   color: white;
 }
 
