--- a/src/stories/forms/QuizForm/QuizForm.css
+++ b/src/stories/forms/QuizForm/QuizForm.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  background: linear-gradient(black, #2a2a2a);
   text-align: center;
   min-width: 80%;
   min-height: 200px;
@@ -13,8 +12,17 @@
   font-family: Optima, sans-serif;
   font-size: 1.2rem;
   font-weight: 600;
-  color: white;
   margin-bottom: 20%;
+}
+
+.quiz--dark {
+  background: linear-gradient(#fefcfc, #fffcfc);
+  color: black;
+}
+
+.quiz--light {
+  background: linear-gradient(#2a2a2a, #393939);
+  color: white;
 }
 
 .quiz-button {
